# RAP2P

./: .gitignore  README.md  eval_watcher.py  pyproject.toml  requirements-colab.txt  scheduler.py
artifacts/checkpoints/context_qlora_seed1701/: history.json
artifacts/checkpoints/context_qlora_seed7/: history.json
artifacts/checkpoints/global_qlora_seed1701/: history.json
artifacts/checkpoints/global_qlora_seed7/: history.json
artifacts/checkpoints/p2p_static_seed1701/: history.json
artifacts/checkpoints/p2p_static_seed7/: history.json
artifacts/checkpoints/rap2p_no_graph_seed1701/: history.json
artifacts/checkpoints/rap2p_no_history_retrained_seed1701/: history.json
artifacts/checkpoints/rap2p_seed1701/: history.json
artifacts_wide/predictions/: p2p_static_seed1701__test__seen.parquet  p2p_static_seed7__test__seen.parquet  rap2p_seed1701__test__seen.parquet  rap2p_seed7__test__seen.parquet
configs/: mvp.yaml  mvp_wide.yaml
paper/: binhex.tex  draft.md  main.tex  refs.bib
scripts/: check_matched_pairs.py  evaluate_all.py  make_figures.py  precompute_embeddings.py  precompute_item_graph.py  prepare_sociobench.py  run_api_baseline.py  train.py  verify_no_leakage.py
src/rap2p/: __init__.py  batching.py  config.py  data.py  embeddings.py  inference.py  item_graph.py  prompting.py  training.py  utils.py  workflows.py
src/rap2p/eval/: metrics.py  (+4 more)
tests/: fakes.py  test_bootstrap.py  test_data.py  test_gating.py  test_heterogeneity.py  test_item_graph.py  test_leakage_guards.py  test_permutation_and_parsing.py  test_rap2p_model.py  test_warm_start.py
(+20 files in other folders)
