[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rap2p"
version = "0.1.0"
description = "RAP2P: Response-Anchored Profile-to-PEFT for few-response survey personalization"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pyarrow>=15,<22",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "PyYAML>=6,<7",
  "tqdm>=4.66,<5",
  "safetensors>=0.4,<1",
]

[project.optional-dependencies]
llm = [
  "transformers==4.51.3",
  "peft==0.15.2",
  "accelerate==1.6.0",
  "bitsandbytes==0.45.3",
  "sentence-transformers==4.1.0",
]
api = [
  "anthropic>=0.40,<1",
  "openai>=1.50,<2",
]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
